Switch to zef ecosystem

--- a/dist.ini
+++ b/dist.ini
@@ -4,6 +4,8 @@ name = Math-Libgsl-Interpolation
 ; enable = false
 filename = lib/Math/Libgsl/Interpolation.rakumod
 
+[UploadToZef]
+
 [PruneFiles]
 ; match = ^ 'xt/'
 
